--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>협력 게임: 폭탄 해체 미션</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #1a1a2e;
-            color: #e8e8e8;
+            background-color: #0F0E1A;
+            color: #E8E8E8;
             transition: background-color 0.5s ease;
         }
         .container {
@@ -21,36 +22,41 @@
             padding: 1rem;
         }
         .card {
-            background-color: #2e2e42;
-            border-radius: 1rem;
-            padding: 2rem;
-            box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+            background-color: #1A192D;
+            border-radius: 1.5rem;
+            padding: 2.5rem;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.5);
             max-width: 90%;
             width: 500px;
+            border: 2px solid #28273F;
         }
         input, button, select {
-            padding: 0.75rem;
-            border-radius: 0.5rem;
+            padding: 1rem;
+            border-radius: 0.75rem;
             border: none;
             width: 100%;
             font-size: 1rem;
-            background-color: #1a1a2e;
-            color: #e8e8e8;
+            background-color: #1A192D;
+            color: #C0C0D0;
             outline: none;
         }
         button {
-            background-color: #e84545;
+            background-color: #FF5A5A;
             color: white;
             font-weight: bold;
             cursor: pointer;
-            transition: background-color 0.2s;
+            transition: background-color 0.2s, transform 0.2s, box-shadow 0.2s;
+            box-shadow: 0 4px 0 #D32F2F;
         }
         button:hover {
-            background-color: #d13232;
+            background-color: #D32F2F;
+            transform: translateY(2px);
+            box-shadow: 0 2px 0 #B71C1C;
         }
         .text-neon {
-            color: #a3ff00;
-            text-shadow: 0 0 5px #a3ff00, 0 0 10px #a3ff00;
+            font-family: 'Orbitron', sans-serif;
+            color: #00E4FF;
+            text-shadow: 0 0 5px #00BFFF, 0 0 10px #00BFFF, 0 0 15px #00BFFF;
         }
         .loading-spinner {
             border: 4px solid rgba(255, 255, 255, 0.3);
@@ -65,30 +71,38 @@
             100% { transform: rotate(360deg); }
         }
         .success-bg {
-            background-color: #0d3810;
+            background-color: #0A2D0D;
         }
         .fail-bg {
-            background-color: #3b0e0e;
+            background-color: #2F0B0B;
         }
         .map-grid {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            gap: 2px;
+            gap: 4px;
         }
         .map-cell {
             width: 48px;
             height: 48px;
-            background-color: #1a1a2e;
-            border: 1px solid #4f516d;
+            background-color: #1A192D;
+            border: 1px solid #4F516D;
             display: flex;
             justify-content: center;
             align-items: center;
             font-size: 24px;
         }
         .hint-item {
-            padding: 0.5rem;
+            padding: 0.75rem 1rem;
             border-radius: 0.5rem;
-            background-color: #4f516d;
+            background-color: #28273F;
+            border: 1px solid #4F516D;
+            text-shadow: 0 0 3px #fff;
+        }
+        .modal-card {
+            background-color: #1A192D;
+            border-radius: 1.5rem;
+            padding: 2rem;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.5);
         }
     </style>
     <script type="module">
@@ -143,7 +157,7 @@
             const modal = document.createElement('dialog');
             modal.className = `fixed inset-0 z-50 flex items-center justify-center p-4 bg-gray-900 bg-opacity-75 rounded-lg shadow-lg`;
             modal.innerHTML = `
-                <div class="bg-gray-800 p-6 rounded-lg text-center space-y-4 max-w-sm w-full">
+                <div class="modal-card p-6 text-center space-y-4 max-w-sm w-full">
                     <p class="text-xl font-bold ${type === 'success' ? 'text-green-400' : 'text-red-400'}">${message}</p>
                     <button class="bg-gray-600 hover:bg-gray-500 text-white font-bold py-2 px-4 rounded-lg" onclick="this.closest('dialog').close()">닫기</button>
                 </div>
@@ -167,8 +181,8 @@
             view.innerHTML = `
                 <div class="card text-center space-y-4">
                     <h1 class="text-3xl font-bold text-neon">폭탄 해체 미션</h1>
-                    <p class="text-lg">혼자서는 폭탄을 해체할 수 없습니다. 모둠원과 협력하여 코드를 완성하세요!</p>
-                    <div class="space-y-2 pt-4">
+                    <p class="text-lg opacity-80 mt-2">혼자서는 폭탄을 해체할 수 없습니다. 모둠원과 협력하여 코드를 완성하세요!</p>
+                    <div class="space-y-4 pt-6">
                         <button id="start-teacher-btn">새 미션 시작 (선생님)</button>
                         <p class="text-sm opacity-70">학생들은 입장 코드를 입력하여 참여합니다.</p>
                         <input type="text" id="join-code-input" placeholder="입장 코드 입력 (예: ABCDEF)" class="mt-4 uppercase">
@@ -212,21 +226,21 @@
                 <div class="card text-center space-y-4">
                     <h2 class="text-2xl font-bold text-neon">미션 설정</h2>
                     <p class="text-sm opacity-80">갈등을 해결하고 폭탄을 해체하세요!</p>
-                    <div class="space-y-2">
+                    <div class="space-y-4">
                         <label for="difficulty-select" class="block text-left font-medium">난이도 선택</label>
-                        <select id="difficulty-select">
+                        <select id="difficulty-select" class="bg-gray-700 text-white rounded-lg p-3">
                             <option value="easy">쉬움 (가짜 단서)</option>
                             <option value="medium">보통 (모순된 지도)</option>
                             <option value="hard">어려움 (충돌하는 암호)</option>
                         </select>
                     </div>
-                    <div class="space-y-2">
+                    <div class="space-y-4">
                         <label for="password-input" class="block text-left font-medium">해체 코드 (4자리 숫자/단어)</label>
-                        <input type="text" id="password-input" placeholder="예: 4217" class="p-2 rounded-lg" maxlength="4">
+                        <input type="text" id="password-input" placeholder="예: 4217" class="p-4 rounded-lg">
                     </div>
                     <button id="start-game-btn">미션 시작</button>
                     <div id="game-info" class="space-y-4 hidden">
-                        <h3 class="text-xl font-bold text-neon pt-4">입장 코드: <span id="join-code" class="text-white text-3xl"></span></h3>
+                        <h3 class="text-xl font-bold text-neon pt-4">입장 코드: <span id="join-code" class="text-white text-3xl font-bold"></span></h3>
                         <p class="text-sm opacity-70">학생들에게 입장 코드를 알려주세요. 각자 자동으로 모둠이 배정됩니다.</p>
                     </div>
                     <div id="game-status-container" class="space-y-4 hidden">
@@ -302,11 +316,11 @@
                                 const team = teams[teamId];
                                 const statusClass = team.solved ? 'text-green-400' : 'text-red-400';
                                 teamsStatusList.innerHTML += `
-                                    <div class="p-4 border border-gray-600 rounded-lg">
+                                    <div class="p-4 border border-[#4F516D] rounded-lg">
                                         <h4 class="font-bold">모둠 ${teamId}</h4>
                                         <p>상태: <span class="${statusClass}">${team.solved ? '미션 성공!' : '진행 중...'}</span></p>
-                                        <p>최근 시도: ${team.lastAttempt || '없음'}</p>
-                                        <div class="mt-2 text-sm opacity-80">
+                                        <p class="text-sm opacity-80">최근 시도: ${team.lastAttempt || '없음'}</p>
+                                        <div class="mt-2 text-sm opacity-70">
                                             참여 학생: ${team.players.map(p => `학생 ${p.playerIndex + 1}`).join(', ')}
                                         </div>
                                     </div>
@@ -330,18 +344,18 @@
             view.innerHTML = `
                 <div class="card text-center space-y-4">
                     <h2 class="text-2xl font-bold text-neon">폭탄 해체 미션</h2>
-                    <p class="text-lg">입장 코드: <span class="text-neon">${joinCode}</span></p>
+                    <p class="text-lg opacity-80 mt-2">입장 코드: <span class="text-neon">${joinCode}</span></p>
                     <div id="player-status" class="space-y-2 hidden">
                         <p class="text-lg">당신은 <span id="team-info" class="text-neon"></span>의 일원입니다.</p>
-                        <p class="text-lg">혼란 속에서 진실을 찾아 폭탄을 해체하세요!</p>
+                        <p class="text-lg opacity-80">혼란 속에서 진실을 찾아 폭탄을 해체하세요!</p>
                     </div>
-                    <div id="player-hint-container" class="p-4 rounded-lg bg-[#1a1a2e] my-4 hidden">
+                    <div id="player-hint-container" class="p-6 rounded-lg bg-[#1A192D] my-4 hidden">
                         <p class="text-lg font-bold" id="hint-label">당신에게 주어진 단서:</p>
-                        <div id="hint-content" class="text-5xl font-bold mt-2 text-white overflow-x-auto"></div>
+                        <div id="hint-content" class="text-4xl font-bold mt-2 text-white overflow-x-auto"></div>
                     </div>
-                    <div class="space-y-2 hidden" id="input-container">
+                    <div class="space-y-4 hidden" id="input-container">
                         <label for="team-answer-input" class="block text-left font-medium">모둠원들과 협력하여 해체 코드를 입력하세요.</label>
-                        <input type="text" id="team-answer-input" placeholder="전체 4자리 코드" maxlength="4" class="uppercase">
+                        <input type="text" id="team-answer-input" placeholder="전체 4자리 코드" maxlength="4" class="uppercase p-4">
                     </div>
                     <button id="submit-answer-btn" class="hidden">코드 입력</button>
                     <button id="join-team-btn" class="mt-4">게임에 참여하기</button>
